[project]
name = "patool"
version = "4.0.5"
requires-python = ">=3.12"
dependencies = []
# these values are set by setup.py
dynamic = ["scripts", "authors", "keywords", "classifiers", "urls", "license", "readme", "description"]

[build-system]
requires = ["setuptools-reproducible>=0.1"]
build-backend = "setuptools_reproducible"

[project.optional-dependencies]
# optional features
argcompletion = [
  "argcomplete>=3.6.2",
]

# these modules are only needed for development
[dependency-groups]
dev = [
  # for using setuptools.setup() in setup.py
  "setuptools==82.0.1",
  # for testing
  "pytest==9.0.3",
  # plugin to run tests in parallel
  "pytest-xdist[psutil]==3.8.0",
  # plugin to run tests in random order
  "pytest-randomly==4.1.0",
  # for python code linting
  "ruff==0.15.12",
  # for python type checking
  "ty==0.0.34",
  # for generating a Python .whl file
  "wheel==0.47.0",
  # for generating the web page
  "sphinx==9.1.0",
  "myst-parser==5.0.0",
  # for upgrading the version number
  "bump2version==1.0.1",
  # for auditing github actions
  "zizmor==1.24.1",
  # check for new packages
  "python-update-checker==0.6",
  # test optional functionality
  "patool[argcompletion]",
]

[tool.patool]
# pin versions of Python and uv for development
python_version_dev = "3.14.5"
uv_version_dev = "0.11.14"

[tool.ty.environment]
# patool uses some imports and attributes that are only available on windows
# so set the type check platform to windows
python-platform = "win32"
# patool tries to import modules that are only available on Python >= 3.14
python-version = "3.14"
